# Delft3D

./: .CMakeLists.txt.un~  .fprettify.rc  .gitignore  CMakeLists.txt  CMakePresets.json  Linux_setup.md  README.md  README_DFLOWFM.md  bsd-2.txt  bsd-3.txt  build.bat  build.sh  build_all.bat  build_alma8.sh  build_d3d4.bat  build_wsl.sh  buildcmake.bat  conanfile.py  open_solution_d3d4.bat  requirements.txt  show-dvc-changes.sh.dvc  sigrid.yaml  sigrid.yml  teamcity_retrieve_release_engine_test_status.txt  teamcity_retrieve_release_engine_test_status_org.txt  testcmake.bat
.devcontainer/: devcontainer.json
.devcontainer/delft3d/: Dockerfile  README.md  devcontainer.json
.devcontainer/delft3d/scripts/: post_create_command.sh
.dvc/: config
.github/workflows/: block_merging_main_into_release_branches.yml  get-aggregate-teamcity-build-status.yml  schedule_interaction_limit.yml
ci/DIMRset_delivery/: config.ini  readme.txt
ci/DIMRset_delivery/scripts/: list_all_what_strings.py
ci/DIMRset_delivery/src/: DimrAutomation.py  all-testbench-binaries.json  common_utils.py  dimr_context.py  run_dimr_automation.py  step2_download_and_install_artifacts.py  step3_update_excel_sheet.py  step4_prepare_email.py  step5_update_public_wiki.py  step6_pin_and_tag_builds.py  teamcity_retrieve_engine_test_status_dpc.py  validate_signing.py
ci/DIMRset_delivery/utils/: svnremove_deleted_files.py
ci/dockerfiles/: Dockerfile-dhydro  set-env.cmd
ci/dockerfiles/linux/: README.md  buildtools.Dockerfile  dimrset.Dockerfile  python39.Dockerfile  third-party-libs.Dockerfile
ci/dockerfiles/windows/: Dockerfile-dhydro-test  Dockerfile-dhydro-test-environment  buildtools.Dockerfile
ci/github/: get_aggregate_teamcity_build_status.sh
ci/python/: pyproject.toml
ci/teamcity/Delft3D/: Delft3DProject.kt  copyExamples.kt  dimrbak.kt  publish.kt  publishAggregateStatus.kt  settings.kts  trigger.kt
ci/teamcity/Dimr_TestbenchMatrix/: linux.kt  linux_approve.kt  settings.kts  trigger.kt  windows.kt  (+1 more)
doc/: compiling.md  compiling_Linux.md  compiling_Windows.md  contributing.md  debugging.md  development.md  unit-testing.md
examples/delft3d4/: run_all_examples.bat  run_all_examples_sp.bat
examples/dflowfm/: readme.txt  run-all-examples-container.sh
greeter_dummy/: greeter_dummy.cpp
hooks/: pre-commit.sh
mermaid/: planning.md  release_flowchart.md
scripts/: install-hooks.ps1  install-hooks.sh
scripts/hooks/: post-commit.sh  pre-commit  pre-commit.sh
src/: setenv.sh  setenv_no_modules.sh
src/cmake/: CMakeLists.txt  README  dependencies.cmake  functions.cmake  linux_scripts.cmake  modules.cmake
src/scripts_lgpl/: artifacts_cleaner.py
src/third_party_open/intelredist/: CMakeLists.txt  intel_redist_windows.cmake
src/third_party_open/netcdf/cmake_deltares/: CMakeLists.txt
src/tools_gpl/cosumo_bmi/: CMakeLists.txt
test/deltares_testbench/: README.md  dimr_dflow1d.xml.txt  dimr_dflow1d_1D_boundaries.xml.txt  dimr_dflow1d_1D_boundaries_lnx64.xml.txt  dimr_dflow1d_backwater_curves.xml.txt  dimr_dflow1d_backwater_curves_lnx64.xml.txt  dimr_dflow1d_cache_files.xml.txt  dimr_dflow1d_cache_files_lnx64.xml.txt  dimr_dflow1d_compound_structures.xml.txt  dimr_dflow1d_compound_structures_lnx64.xml.txt  dimr_dflow1d_dflowfm_drtc_win64.xml.txt  dimr_dflow1d_dflowfm_win64.xml.txt  dimr_dflow1d_drr.xml.txt  dimr_dflow1d_drr_lnx64.xml.txt  dimr_dflow1d_drtc.xml.txt  dimr_dflow1d_drtc_lnx64.xml.txt  dimr_dflow1d_drtc_rws_acceptance_lnx64.xml.txt  dimr_dflow1d_drtc_tutorials_win64.xml.txt  dimr_dflow1d_interpolating_crs_over_branches.xml.txt  dimr_dflow1d_interpolating_crs_over_branches_lnx64.xml.txt  dimr_dflow1d_lateral_flows.xml.txt  dimr_dflow1d_lateral_flows_lnx64.xml.txt  dimr_dflow1d_lateral_momentum_exchange.xml.txt  dimr_dflow1d_lateral_momentum_exchange_lnx64.xml.txt  dimr_dflow1d_leftover.xml.txt  dimr_dflow1d_morphology.xml.txt  dimr_dflow1d_morphology_lnx64.xml.txt  dimr_dflow1d_numerical_aspects.xml.txt  dimr_dflow1d_numerical_aspects_lnx64.xml.txt  dimr_dflow1d_restart.xml.txt  dimr_dflow1d_rws_cross_sections.xml.txt  dimr_dflow1d_rws_cross_sections_lnx64.xml.txt  dimr_dflow1d_salinity.xml.txt  dimr_dflow1d_salinity_lnx64.xml.txt  dimr_dflow1d_single_structures.xml.txt  dimr_dflow1d_single_structures_lnx64.xml.txt  dimr_dflow1d_temperature.xml.txt  dimr_dflow1d_vertical_segmented_conveyance.xml.txt  dimr_dflow1d_vertical_segmented_conveyance_lnx64.xml.txt  dimr_dflowfm_1D_lnx64_parallel.xml.txt  (+83 more)
tools/conan_recipes/: conanfile.py  netcdf-fortran.py  readme.txt
tools/deltares_fortran_styler/: README.md  array_delimiter_converter.py  base_converter.py  double_precision_converter.py  file_processor.py  fortran_styler.py
tools/double_precision_conversion/: convert_double.py
(+1243 files in other folders)
